[package]
name = "mdbook-typst-pdf"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KaiserY/mdbook-typst-pdf"
description = "mdbook typst pdf backend"
keywords = ["mdbook", "typst", "pdf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typst = "0.13.0"
typst-pdf = "0.13.0"
typst-kit = "0.13.0"
typst-timing = "0.13.0"
codespan-reporting = "0.11.1"
chrono = { version = "0.4.39", default-features = false, features = [
  "clock",
  "std",
] }
ecow = "0.2.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
same-file = "1.0.6"
comemo = "0.4.0"
fontdb = { version = "0.23", default-features = false, features = [
  "memmap",
  "fontconfig",
] }
once_cell = "1"
ureq = { version = "3", default-features = false, features = ["gzip", "json"] }
env_proxy = "0.4"
dirs = "6"
flate2 = "1"
tar = "0.4"
pathdiff = "0.2"
tempfile = "3.17.1"
mdbook = "0.4.45"
serde = { version = "1.0.218", features = ["derive"] }
anyhow = "1.0.96"
pulldown-cmark = "0.13.0"
markup5ever_rcdom = "=0.5.0-unofficial"
html5ever = "0.29.1"
regex = "1.11.1"
parking_lot = "0.12.3"
notify = "8"
openssl = { version = "0.10.71" , features = ["vendored"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
  "x86_64-pc-windows-msvc",
]
# Which actions to run on pull requests
pr-run-mode = "plan"
