[package]
name = "mdbook-typst-pdf"
version = "0.6.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KaiserY/mdbook-typst-pdf"
description = "mdbook typst pdf backend"
keywords = ["mdbook", "typst", "pdf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typst = "0.13.1"
typst-pdf = "0.13.1"
typst-kit = "0.13.1"
typst-timing = "0.13.1"
codespan-reporting = "0.12.0"
chrono = { version = "0.4.41", default-features = false, features = [
  "clock",
  "std",
] }
ecow = "0.2.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ureq = { version = "3", default-features = false, features = ["gzip", "json"] }
pathdiff = "0.2"
tempfile = "3.19.1"
mdbook = "0.4.49"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
pulldown-cmark = "0.13.0"
markup5ever_rcdom = "0.5.3-unofficial"
html5ever = "0.31.0"
regex = "1.11.1"
parking_lot = "0.12.3"
openssl = { version = "0.10.72" , features = ["vendored"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
  "x86_64-pc-windows-msvc",
]
# Which actions to run on pull requests
pr-run-mode = "plan"
