[package]
name = "mdbook-typst-pdf"
version = "0.7.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KaiserY/mdbook-typst-pdf"
description = "mdbook typst pdf backend"
keywords = ["mdbook", "typst", "pdf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typst = "0.14.2"
typst-pdf = "0.14.2"
typst-kit = "0.14.2"
typst-timing = "0.14.2"
comrak = "0.49.0"
codespan-reporting = "0.13.1"
chrono = { version = "0.4.42", default-features = false, features = [
  "clock",
  "std",
] }
ecow = "0.2.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ureq = { version = "3.1.4", default-features = false, features = [
  "gzip",
  "json",
] }
pathdiff = "0.2.3"
tempfile = "3.24.0"
mdbook-renderer = "0.5.2"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
pulldown-cmark = "0.13.0"
markup5ever_rcdom = "0.36.0"
html5ever = "0.36.0"
regex = "1.12.2"
rustc-hash = "2.1.1"
parking_lot = "0.12.5"
openssl = { version = "0.10.75", features = ["vendored"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
